--- a/login-dist.html
+++ b/login-dist.html
@@ -11,6 +11,7 @@
 <div align="center">
 <h3 class="spip">#NOM_SITE_SPIP<br>
 <small><:login_acces_prive:></small></h3>
+<div align="#LANG_RIGHT">#FORMULAIRE_LANG</div>
 </div>
 #LOGIN_PRIVE
 </td></tr></table></center>
