--- a/site-dist.html
+++ b/site-dist.html
@@ -85,7 +85,7 @@
 
 <table width="100%" cellpadding="0" cellspacing="0" border="0">
 <tr width="100%">
-<td width="100%" backgrundn="NAVPICS/point.gif"><img src="NAVPICS/rien.gif" alt="" width="8" height="8" border="0"></td>
+<td width="100%" background="NAVPICS/point.gif"><img src="NAVPICS/rien.gif" alt="" width="8" height="8" border="0"></td>
 </tr>
 </table>
 
