gestion du cookie de langue avec spip_cookie (sinon le cookie de l'espace privé et celui du panneau de login entrent en collision)

--- a/login-dist.html
+++ b/login-dist.html
@@ -11,7 +11,7 @@
 <div align="center">
 <h3 class="spip">#NOM_SITE_SPIP<br>
 <small><:login_acces_prive:></small></h3>
-<div align="#LANG_RIGHT">#FORMULAIRE_LANG</div>
+<div align="#LANG_RIGHT">#FORMULAIRE_LANG_ECRIRE</div>
 </div>
 #LOGIN_PRIVE
 </td></tr></table></center>
