--- a/rubrique-dist.html
+++ b/rubrique-dist.html
@@ -26,7 +26,7 @@
 
 <div id="navigation">
 
-<h1 class="structure"><:public:navigation:></h1>
+<h1 class="structure"><:navigation:></h1>
 
 <!-- Menu de navigation general -->
 
