--- a/mot-dist.html
+++ b/mot-dist.html
@@ -23,7 +23,7 @@
 
 <div id="navigation">
 
-<h1 class="structure"><:public:navigation:></h1>
+<h1 class="structure"><:navigation:></h1>
 
 <!-- Menu de navigation general -->
 
