mailto:#EMAIL remplacé par #URL_AUTEUR + formulaire écrire au-dessus de l liste des articles. (James & André Vincent)

--- a/article-dist.html
+++ b/article-dist.html
@@ -149,7 +149,7 @@
 	<ul class="divers">
 	<BOUCLE_auteurs(AUTEURS) {id_article} {par nom}>
 		<li>
-		<div class="menu-titre" title="&eacute;crire &agrave; cet auteur"><a href="mailto:#EMAIL">#NOM</a></div>
+		<div class="menu-titre"><a href="#URL_AUTEUR">#NOM</a></div>
 		<ul>
 		[<li class="menu-item" style="text-align: center"><a href="(#URL_SITE)">#NOM_SITE</a></li>]
 		[<li class="menu-item" style="text-align: center">(#BIO)</li>]
