--- a/sommaire-dist.html
+++ b/sommaire-dist.html
@@ -71,7 +71,7 @@
 
 <!-- Logo SPIP -->
 
-<a href="http://www.spip.net"><img src="NAVPICS/petit-logo-spip.gif" width="88" height="31" border="0" alt="<:site_realise_avec_spip:>"></a>
+<a href="http://www.spip.net"><img src="spip_logo.jpg" width="105" height="92" border="0" alt="<:site_realise_avec_spip:>"></a>
 
 
 <!-- Formulaire administrateur -->
