corrections backend (Nicolas Krebs)

--- a/backend-breves-dist.html
+++ b/backend-breves-dist.html
@@ -1,5 +1,5 @@
-<?php echo '<'.'?xml version="1.0" encoding="#CHARSET"?'.'>'; ?>
-<rss version="0.91">
+<?php echo '<'.'?xml version="1.0" encoding="#CHARSET"?'.">\n"; ?>
+<rss version="0.91" xmlns:dc="http://purl.org/dc/elements/1.1/">
 
 <channel>
 
