--- a/backend-dist.html
+++ b/backend-dist.html
@@ -1,4 +1,4 @@
-<?php echo '<'.'?xml version="1.0" encoding="#CHARSET"?'.'>'; ?>
+<?php echo '<'.'?xml version="1.0" encoding="#CHARSET"?'.">\n"; ?>
 <rss version="0.91" xmlns:dc="http://purl.org/dc/elements/1.1/">
 
 <channel>
