Clarificiation de l'application de la licence GNU/GPL dans le cadre du droit français

--- a/ecrire/copyright_fr.html
+++ b/ecrire/copyright_fr.html
@@ -27,9 +27,11 @@ a.icone:hover { text-decoration: none; }
 
 <p>Copyright &copy; 2001-2004, Arnaud Martin, Antoine Pitrou et Philippe Rivi&egrave;re. </p>
 <p>Ce programme est un logiciel libre&nbsp;; vous pouvez le redistribuer et/ou le modifier conform&eacute;ment aux dispositions de la Licence Publique G&eacute;n&eacute;rale GNU, telle que publi&eacute;e par la Free Software Foundation&nbsp;; version 2 de la licence, ou encore (&agrave; votre choix) toute version ult&eacute;rieure. </p>
-<p>Ce programme est distribu&eacute; dans l'espoir qu'il sera utile, mais SANS AUCUNE GARANTIE&nbsp;; sans m&egrave;me la garantie implicite de COMMERCIALISATION ou D'ADAPTATION A UN OBJET PARTICULIER. Pour plus de d&eacute;tails, voir la Licence Publique G&eacute;n&eacute;rale GNU. </p>
+<p>Ce programme est distribu&eacute; dans l'espoir qu'il sera utile, mais SANS AUCUNE GARANTIE&nbsp;; sans m&ecirc;me la garantie implicite de COMMERCIALISATION ou D'ADAPTATION A UN OBJET PARTICULIER. Pour plus de d&eacute;tails, voir la Licence Publique G&eacute;n&eacute;rale GNU. </p>
 <p>Un exemplaire de la Licence Publique G&eacute;n&eacute;rale GNU doit &ecirc;tre fourni avec ce programme&nbsp;; si ce n'est pas le cas, &eacute;crivez &agrave; la Free Software Foundation Inc., 675 Mass Ave, Cambridge, MA 02139, Etats-Unis. </p>
 <p><b> Ce logiciel est t&eacute;l&eacute;chargeable &agrave; l'adresse <a href="http://www.spip.net/" class="spip_url">http://www.spip.net/</a>&nbsp;; vous trouverez &eacute;galement, sur ce site, un mode d'emploi complet et des informations suppl&eacute;mentaires. </b> </p>
+
+<p>En droit fran&ccedil;ais, SPIP est r&eacute;gi par les dispositions du code de la propri&eacute;t&eacute; intellectuelle (CPI). Le noyau de SPIP est une oeuvre de collaboration entre ses auteurs, d&eacute;sign&eacute;s ci-dessus (article L&nbsp;113-1 du CPI). L'ensemble du projet SPIP forme une oeuvre collective au sens des articles L&nbsp;113-2 et L&nbsp;113-5 du CPI. Les auteurs mettent l'oeuvre &agrave; disposition de tous selon les droits et obligations d&eacute;finis par la licence publique g&eacute;n&eacute;rale GNU.</p>
 
 <hr>
 <p>GNU General Public License&nbsp;: [<a href='license.txt'>version texte</a>] [<a href='http://www.gnu.org/copyleft/gpl.html'>version HTML</a>]</p>
