Ajout de tidy: si l'on ajoute $xhtml=true; dans l'appel de squelette (article.php3) et que tidy est install sur le serveur, la page est passee en XHTML valide.

--- a/article-dist.html
+++ b/article-dist.html
@@ -1,13 +1,9 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <BOUCLE_article_principal(ARTICLES) {id_article}>
-<html lang="#LANG" xmlns:m=" http://www.w3.org/TR/REC-MathML">
+<html lang="#LANG">
 <head>
-<object id="mathplayer" classid="clsid:32F66A20-7614-11D4-BD11-00104BD3F987">
-</object>
-<?php echo "<?import namespace=\"m\" implementation=\"#mathplayer\"?>\n"; ?>
 <title>[(#TITRE|textebrut)]</title>
 <meta http-equiv="Content-Type" content="text/html; charset=#CHARSET">
-<script type="text/javascript" src="mathmlinHTML.js"></script>
 <!-- Ceci est la feuille de style par defaut pour les types internes a SPIP -->
 <link rel="stylesheet" href="spip_style.css" type="text/css">
 
@@ -21,7 +17,7 @@
 
 </head>
 
-<body bgcolor="white" dir="#LANG_DIR" onLoad="convert2math();">
+<body bgcolor="white" dir="#LANG_DIR">
 
 <div id="navigation">
 
