Nettoyage des formulaires de forums, du formulaire d'inscription...

--- a/sommaire-dist.html
+++ b/sommaire-dist.html
@@ -148,7 +148,8 @@
 
 	<!-- Inscription au site -->
 
-	[<div class="formulaire"><:participer_site:><p>
+	[<div class="formulaire"><:participer_site:>
+	<br /><br />
 	(#FORMULAIRE_INSCRIPTION)</div>]
 
 	</div>
