Pas de <a></a> avant les div, sinon espace parasite.

--- a/article-dist.html
+++ b/article-dist.html
@@ -245,9 +245,8 @@
 <div class="forum-fil">
 
 <div class="forum">
-<a name="forum#ID_FORUM"></a>
 <div class="forum-chapo">
-<div class="forum-titre">#TITRE</div>
+<div class="forum-titre"><a name="forum#ID_FORUM"></a>#TITRE</div>
 [(#DATE|affdate)][, <:par_auteur:> <A HREF="mailto:#EMAIL">(#NOM)</A>]
 </div>
 <div class="forum-item">
@@ -263,9 +262,8 @@
 
 	<li>
 	<div class="forum">
-	<a name="forum#ID_FORUM"></a>
 	<div class="forum-chapo">
-	<div class="forum-titre">#TITRE</div>
+	<div class="forum-titre"><a name="forum#ID_FORUM"></a>#TITRE</div>
 	[(#DATE|affdate)][, <:par_auteur:> <A HREF="mailto:#EMAIL">(#NOM)</A>]
 	</div>
 	<div class="forum-item">
