--- a/login-dist.html
+++ b/login-dist.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html lang="#LANG">
 <head>
-<title><:login_acces_prive:></title>
-<meta http-equiv="Content-Type" content="text/html; charset=#CHARSET">
-<link rel="stylesheet" href="spip_style.css" type="text/css" />
+	<title><:login_acces_prive:></title>
+	<meta http-equiv="Content-Type" content="text/html; charset=#CHARSET">
+	<link rel="stylesheet" href="spip_style.css" type="text/css">
 </head>
-<body bgcolor="#ffffff" text="#000000" link="#e86519" vlink="#6e003a" alink="#ff9900" topmargin="0" leftmargin="0" marginwidth="0" marginheight="0" dir="#LANG_DIR">
+<body bgcolor="white" dir="#LANG_DIR">
 
 <br><br><br><center><table width="400"><tr><td width="400">
 <div align="center">
@@ -15,6 +15,7 @@
 </div>
 #LOGIN_PRIVE
 </td></tr></table></center>
+
 
 </body>
 </html>
