debut_ dans la pétition (inutile sauf pour tester !)

--- a/article-dist.html
+++ b/article-dist.html
@@ -217,7 +217,7 @@
 </thead>
 <tbody>]
 <//B_signatures_decompte>
-<BOUCLE_signatures(SIGNATURES) {id_article} {par date} {inverse} {0,30}>
+<BOUCLE_signatures(SIGNATURES) {id_article} {par date} {inverse} {debut_signatures,30}>
 <tr>
 	<td class="signature-date">[(#DATE|affdate_court)]</td>
 	<td class="signature-nom">#NOM[<br><a href="#URL_SITE">(#NOM_SITE)</a>]</td>
