boutons admin (Jack Pyrate)

--- a/article-dist.html
+++ b/article-dist.html
@@ -114,13 +114,11 @@
 </B_forums_liens>
 
 
-<!-- Formulaire administrateur -->
-
-[(#FORMULAIRE_ADMIN)]
-
-
 </div>
 
+<!-- Formulaire administrateur -->
+
+#FORMULAIRE_ADMIN
 
 
 <!-- Une : derniers articles publies -->
