--- a/auteur-dist.html
+++ b/auteur-dist.html
@@ -50,12 +50,11 @@
 [(#FORMULAIRE_RECHERCHE)]
 
 
-<!-- Formulaire administrateur -->
-
-[(#FORMULAIRE_ADMIN)]
-
 </div>
 
+<!-- Formulaire administrateur -->
+
+#FORMULAIRE_ADMIN
 
 <!-- Une : affichage de l'auteur -->
 
