--- a/breve-dist.html
+++ b/breve-dist.html
@@ -109,13 +109,11 @@
 </B_articles_secteur>
 
 
-<!-- Formulaire administrateur -->
-
-[(#FORMULAIRE_ADMIN)]
-
-
 </div>
 
+<!-- Formulaire administrateur -->
+
+#FORMULAIRE_ADMIN
 
 
 <!-- Contenu : corps de la breve -->
