--- a/forum-dist.html
+++ b/forum-dist.html
@@ -41,11 +41,11 @@
 </ul>
 </div>
 
+</div>
+
 <!-- Formulaire administrateur -->
 
-[(#FORMULAIRE_ADMIN)]
-
-</div>
+#FORMULAIRE_ADMIN
 
 
 <!-- Contenu : poster un message dans le forum -->
