--- a/mot-dist.html
+++ b/mot-dist.html
@@ -88,11 +88,11 @@
 </B_groupes_freres>
 
 
+</div>
 
 <!-- Formulaire administrateur -->
-[(#FORMULAIRE_ADMIN)]
 
-</div>
+#FORMULAIRE_ADMIN
 
 
 <!-- Une : contenu du mot-cle -->
