--- a/plan-dist.html
+++ b/plan-dist.html
@@ -118,12 +118,11 @@
 
 </BOUCLE_secteurs>
 
+</div>
+
 <!-- Formulaire administrateur -->
 
-[(#FORMULAIRE_ADMIN)]
-
-
-</div>
+#FORMULAIRE_ADMIN
 
 
 </body>
