--- a/recherche-dist.html
+++ b/recherche-dist.html
@@ -82,13 +82,11 @@
 </div>
 </B_mots>
 
-<!-- Formulaire administrateur -->
-
-[(#FORMULAIRE_ADMIN)]
-
-
 </div>
 
+<!-- Formulaire administrateur -->
+
+#FORMULAIRE_ADMIN
 
 
 <!-- Une : articles trouves -->
