--- a/resume-dist.html
+++ b/resume-dist.html
@@ -65,12 +65,11 @@
 </B_forums_liens>
 
 
+</div>
+
 <!-- Formulaire administrateur -->
 
-[(#FORMULAIRE_ADMIN)]
-
-
-</div>
+#FORMULAIRE_ADMIN
 
 
 <!-- Une : articles les plus populaires -->
