--- a/rubrique-dist.html
+++ b/rubrique-dist.html
@@ -108,12 +108,11 @@
 </B_breves_rubrique>
 
 
+</div>
+
 <!-- Formulaire administrateur -->
 
-[(#FORMULAIRE_ADMIN)]
-
-
-</div>
+#FORMULAIRE_ADMIN
 
 
 
