--- a/site-dist.html
+++ b/site-dist.html
@@ -50,11 +50,11 @@
 [(#FORMULAIRE_RECHERCHE)]
 
 
+</div>
+
 <!-- Formulaire administrateur -->
 
-[(#FORMULAIRE_ADMIN)]
-
-</div>
+#FORMULAIRE_ADMIN
 
 
 <!-- Une : affichage du site -->
