--- a/sommaire-dist.html
+++ b/sommaire-dist.html
@@ -73,12 +73,11 @@
 
 <a href="http://www.spip.net"><img src="IMG/logo_spip.jpg" width="105" height="92" border="0" alt="<:site_realise_avec_spip:>"></a>
 
+</div>
 
 <!-- Formulaire administrateur -->
 
-[(#FORMULAIRE_ADMIN)]
-
-</div>
+#FORMULAIRE_ADMIN
 
 
 <div id="principal" class="contenu">
