modifs w3 (Nicolas Krebs)

--- a/login-dist.html
+++ b/login-dist.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=#CHARSET">
 	<link rel="stylesheet" href="spip_style.css" type="text/css">
 </head>
-<body bgcolor="white" dir="#LANG_DIR" bgcolor="#ffffff" text="#000000" link="#e86519" vlink="#6e003a" alink="#ff9900">
+<body dir="#LANG_DIR" bgcolor="#ffffff" text="#000000" link="#e86519" vlink="#6e003a" alink="#ff9900">
 
 <br><br><br><center><table width="400"><tr><td width="400">
 <div align="center">
