--- a/rubrique-dist.html
+++ b/rubrique-dist.html
@@ -199,7 +199,14 @@
 	</div>
 	</div>
 	</B_sites>
-	
+
+	[<div class="menu"><div class="divers">
+	<div class="menu-titre">
+	<:proposer_site:>
+	</div>
+	(#FORMULAIRE_SITE)
+	</div></div>]
+
 	</div>
 
 [<div class="chapo">(#TEXTE)</div>]
@@ -225,10 +232,11 @@
 	<br>
 </BOUCLE_articles_recents>
 
-</div>
 
 </div>
 
+
+</div>
 
 </body>
 </html>
